--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,7 +1,5 @@
 <div class="owl-carousel">
-	<div><%= image_tag("http://vignette2.wikia.nocookie.net/pokemon/images/1/15/007Squirtle_XY_anime.png/revision/latest?cb=20140916184418") %> </div>
-	<div><%= image_tag("http://www.pokemon20.com/assets/img/mythical/mew/poke_mew.png") %> </div>
+	<div><%= image_tag("https://s3.us-east-2.amazonaws.com/decade-leather-site-images/IMG_3762.JPG") %> </div>
+	<div><%= image_tag("https://s3.us-east-2.amazonaws.com/decade-leather-site-images/IMG_3763.JPG") %> </div>
 	<div> slide 3 </div>
-	<div> slide 4 </div>
-	<div> slide 5 </div>
 </div>
