--- a/app/views/cart/checkout_verify.html.erb
+++ b/app/views/cart/checkout_verify.html.erb
@@ -1,5 +1,5 @@
-<div>
-  <h2><%= link_to "Log in", new_user_session_path %></h2>
+<div class="verify_block">
+  <h2>Log in or <%= link_to "Checkout as Guest", checkout_info_path(:level => "Verified") %></h2>
 
   <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
    
@@ -26,10 +26,4 @@
   <% end %>
 
   <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
-</div>
-
-<h2> Or </h2>
-
-<div>
-  <h2>  <%= link_to "Checkout as Guest", checkout_info_path(:level => "Verified") %></h2>
 </div>
